Version 1.2.0 -- 25 July 2007
-------------------------------------------------------------
24 July 2007
+ Fixed image url text field in edit form. Added default http://
+ Made description textarea smaller.
+ Updated files: templates/image_edit.tpl

20 July 2007
+ Pinned image folders only show original thumbnails
+ Added minimum pop up window size
+ Added alt tag to no image
+ Fixed clear image link
+ Updated mp3player
+ Added missing branch directory to copy process in 1.1.0 update
+ Updated file: javascript/clear_image/head.js, conf/config.php

19 July 2007
+ Added missing "return true" to the install.php
+ Added upper limit on image dimension should a module have a high
  tolerance for its size.

18 July 2007
+ Subbed the current url for the # in the src for the folder onclick
  link. For some pain-in-my-ass reason, firefox loads the root
  regardless of the return false on the end.
+ javascript altered. Resampled image was using thumbnail image. I
  thought I had fixed that. Guess not. Also plugged in width and height
  just in case.
+ Updated files: javascript/pick_image/head.js

16 July 2007
+ Removed files: edit_embed.tpl

2 July 2007
+ Moved video types into video_types.php config file. Need to move
  filter detection into a config as well.
+ multimedia folder will be placed in files/multimedia/ not
  files/filecabinet/multimedia/
+ Each folder tab now checks the write status of each directory
  separately.
+ added extra multimedia type to icon check
+ Added install.php to create multimedia folder.
+ Updated files: conf/video_types.php

28 June 2007
+ added translation to tallied item count. also changed "items" to
  "images"
+ Folder now loads files in filename order.
+ Added checkbox that allows you to hide child images
+ Deleting a parent image makes all child images parents.
+ Changed wording on image linking to urls
+ Updated files: javascript/folder_contents/head.js,
                 javascript/pick_image/head.js