@@ -7,7 +7,9 @@
 
 function filecabinet_install(&$content)
 {
-    $mm_dir = PHPWS_HOME_DIR . 'files/multimedia';
+    $home_dir = PHPWS_Boost::getHomeDir();
+
+    $mm_dir = $home_dir . 'files/multimedia';
     if (!is_dir($mm_dir)) {
         if (!@mkdir($mm_dir)) {
             $content[] = dgettext('filecabinet', 'Failed to create files/multimedia directory.');
@@ -16,6 +18,17 @@ function filecabinet_install(&$content)
             $content[] = dgettext('filecabinet', 'files/multimedia directory created successfully.');
         }
     }
+
+    $classify_dir = $home_dir . 'files/filecabinet/incoming';
+    if (!is_dir($classify_dir)) {
+        if (!@mkdir($classify_dir)) {
+            $content[] = dgettext('filecabinet', 'Failed to create files/filecabinet/classify directory.');
+            return false;
+        } else {
+            $content[] = dgettext('filecabinet', 'files/filecabinet/classify directory created successfully.');
+        }
+    }
+
     return true;
 }
 
